AWS CloudFormation.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'CloudFormation template for Django Category Project'

Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: must be the name of an existing EC2 KeyPair.

Resources:
  DjangoProjectInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t3.micro
      ImageId: ami-0747bdcabd34c712a  # Amazon Linux 2 AMI (HVM) - Kernel 5.10, SSD Volume Type
      KeyName: !Ref KeyName
      IamInstanceProfile: !Ref DjangoProjectInstanceProfile
      SecurityGroups: 
        - !Ref DjangoProjectSecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install -y git
          yum install -y python3
          pip3 install django mysqlclient
          
          git clone https://github.com/rightshero/sw_task.git
          cd /home/ec2-user/sw_task
          
          # python3 manage.py migrate
          # python3 manage.py runserver 0.0.0.0:8000
      Tags:
        - Key: Name
          Value: DjangoProjectInstance

  DjangoProjectSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH, HTTP, and HTTPS access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

  DjangoProjectRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AdministratorAccess

  DjangoProjectInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: "/"
      Roles:
        - !Ref DjangoProjectRole

Outputs:
  InstanceId:
    Description: InstanceId of the newly created EC2 instance
    Value: !Ref DjangoProjectInstance
  PublicDNS:
    Description: Public DNSName of the newly created EC2 instance
    Value: !GetAtt DjangoProjectInstance.PublicDnsName
  PublicIP:
    Description: Public IP address of the newly created EC2 instance
    Value: !GetAtt DjangoProjectInstance.PublicIp
